-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 RC
-
None
-
-
2c16e0c30c6c5ed12af52ecac2cda128487cb379 (qt/qtdeclarative/5.12)
Any item named 'column' can't be accessed from within a Repeater or ListView delegate.
This is breaking user code and prints no error whatsoever, which makes difficult to debug.
import QtQuick 2.2 Item { id: column // Rename to foo to make it work width: 100; height: 100; Repeater { model: 1 Rectangle { color: "blue" height: 100 anchors.left: column.left // Rename to foo to make it work anchors.right: column.right // Rename to foo to make it work } } }
Whatever new functionality Repeater and/or models have in 5.12 should be guarded by a new import version
- duplicates
-
QTBUG-74533 [REG: 5.11 -> 5.12] QML ignores if id name is "row"
-
- Closed
-
- is duplicated by
-
QTBUG-73252 ColumnLayout incorrectly exposes attached properties
-
- Open
-
-
QTBUG-73118 Column items inside repeater cannot use column width (Qt 5.12.0 regression)
-
- Closed
-
-
QTBUG-72643 qml binding with global variable in Repeater do not work
-
- Closed
-
-
QTBUG-73332 REG: In Hangman example, solution letters are positioned on top of each other
-
- Closed
-
- relates to
-
QTBUG-35476 QtQuick item views should provide the model data in an attached property
-
- Closed
-