QQmlDelegateModel: guard new row/column properties with revision 1

Tag the new 'row' and 'column' properties with the correct revision, and
associate the revision with import version 5.12. This will make sure that
they cannot be accessed by the delegate unless the QQmlAdaptorModel has the
correct minorVersion set.

Fixes: QTBUG-70031
Change-Id: I49e67c37ab5b7925c7bca313bbb99f04d1387cc4